# microparsec

./: .gitignore  LICENSE  README.md  microparsec.cabal
src/: microparsec.hs
src/Text/: Microparsec.hs
src/Text/Microparsec/: Char.hs  Core.hs  Prim.hs
tests/: Spec.hs
