name:                microparsec
version:             0.1.0.0
synopsis:            A lightweigt parser combinator library inspired by parsec
license:             GPL-3
license-file:        LICENSE
author:              Dathan Ault-McCoy
maintainer:          kwarrtz@icloud.com
copyright:           (c) 2015 Dathan Ault-McCoy
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Microparsec
  other-extensions:    TupleSections
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010